--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "next-transpile-modules": "^4.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "reason-react": "^0.9.1",
+    "reason-react": "^0.9.1"
   },
   "scripts": {
     "dev": "next",
