remove gentype from bsconfig

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -20,10 +20,5 @@
   "warnings": {
     "error": "+101+8"
   },
-  "bsc-flags": ["-bs-no-version-header", "-bs-super-errors", "-bs-g"],
-  "gentypeconfig": {
-    "language": "untyped",
-    "shims": [],
-    "module": "es6"
-  }
+  "bsc-flags": ["-bs-no-version-header", "-bs-super-errors", "-bs-g"]
 }
